@@ -37,11 +37,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.PrintStream;
 import java.io.UncheckedIOException;
-import java.io.UnsupportedEncodingException;
 import java.nio.charset.Charset;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
@@ -74,9 +71,9 @@ public class CLICommandInvoker {
     private SecurityContext originalSecurityContext = null;
 
     private InputStream stdin;
-    private List<String> args = Collections.emptyList();
+    private List<String> args = List.of();
     @Deprecated
-    private List<Permission> permissions = Collections.emptyList();
+    private List<Permission> permissions = List.of();
     private Locale locale = Locale.ENGLISH;
 
     public CLICommandInvoker(final JenkinsRule rule, final CLICommand command) {
@@ -99,8 +96,7 @@ public class CLICommandInvoker {
      */
     @Deprecated
     public CLICommandInvoker authorizedTo(final Permission... permissions) {
-
-        this.permissions = Arrays.asList(permissions);
+        this.permissions = List.of(permissions);
         return this;
     }
 
@@ -126,8 +122,7 @@ public class CLICommandInvoker {
     }
 
     public CLICommandInvoker withArgs(final String... args) {
-
-        this.args = Arrays.asList(args);
+        this.args = List.of(args);
         return this;
     }
 
@@ -153,18 +148,13 @@ public class CLICommandInvoker {
             throw new RuntimeException(e);
         }
 
-        final int returnCode;
-        try {
-            returnCode =
-                    command.main(
-                            args,
-                            locale,
-                            stdin,
-                            new PrintStream(out, false, outCharset.name()),
-                            new PrintStream(err, false, errCharset.name()));
-        } catch (UnsupportedEncodingException e) {
-            throw new AssertionError(e);
-        }
+        final int returnCode =
+                command.main(
+                        args,
+                        locale,
+                        stdin,
+                        new PrintStream(out, false, outCharset),
+                        new PrintStream(err, false, errCharset));
 
         restoreAuth();
 
@@ -203,7 +193,7 @@ public class CLICommandInvoker {
         @NonNull
         @Override
         public Collection<String> getGroups() {
-            return Collections.emptySet();
+            return Set.of();
         }
     }
 
@@ -280,12 +270,7 @@ public class CLICommandInvoker {
         }
 
         public String stdout() {
-
-            try {
-                return out.toString(outCharset.name());
-            } catch (UnsupportedEncodingException e) {
-                throw new AssertionError(e);
-            }
+            return out.toString(outCharset);
         }
 
         public byte[] stdoutBinary() {
@@ -293,12 +278,7 @@ public class CLICommandInvoker {
         }
 
         public String stderr() {
-
-            try {
-                return err.toString(errCharset.name());
-            } catch (UnsupportedEncodingException e) {
-                throw new AssertionError(e);
-            }
+            return err.toString(errCharset);
         }
 
         public byte[] stderrBinary() {
