@@ -35,7 +35,6 @@ import hudson.scm.ChangeLogSet.Entry;
 import hudson.scm.EditType;
 import hudson.scm.NullSCM;
 import hudson.scm.RepositoryBrowser;
-import hudson.scm.SCM;
 import hudson.scm.SCMDescriptor;
 import hudson.scm.SCMRevisionState;
 import org.xml.sax.SAXException;
@@ -45,9 +44,9 @@ import java.io.IOException;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Set;
 
 /**
  * Fake SCM implementation that can report arbitrary commits from arbitrary users.
@@ -80,7 +79,7 @@ public class FakeChangeLogSCM extends NullSCM implements Serializable {
     }
 
     @Override public SCMDescriptor<?> getDescriptor() {
-        return new SCMDescriptor<SCM>(null) {};
+        return new SCMDescriptor<>(null) {};
     }
 
     public static class ChangelogAction extends InvisibleAction {
@@ -102,7 +101,7 @@ public class FakeChangeLogSCM extends NullSCM implements Serializable {
                     return new FakeChangeLogSet(build, action.entries);
                 }
             }
-            return new FakeChangeLogSet(build, Collections.emptyList());
+            return new FakeChangeLogSet(build, List.of());
         }
     }
 
@@ -159,7 +158,7 @@ public class FakeChangeLogSCM extends NullSCM implements Serializable {
 
         @Override
         public Collection<String> getAffectedPaths() {
-            return Collections.singleton(path);
+            return Set.of(path);
         }
 
         @Override
@@ -175,7 +174,7 @@ public class FakeChangeLogSCM extends NullSCM implements Serializable {
                     return EditType.EDIT;
                 }
             };
-            return Collections.singleton(affectedFile);
+            return Set.of(affectedFile);
         }
 
         private static final long serialVersionUID = 1L;
